--- a/src/App.css
+++ b/src/App.css
@@ -281,3 +281,25 @@ html { min-width: 1000px; cursor: default; }
 .light_off_border {
   border-color: white;
 }
+
+#help_icon {
+  width: 25px;
+  display: block;
+  cursor: pointer;
+  margin : -25px 0px 0px 85%;
+}
+
+#help_title {
+  text-align: center;
+  border-bottom: solid 1px #ababab;
+  padding-bottom: 15px;
+  margin-top: 0px;
+}
+
+#help_close_div img {
+  width: 25px;
+  position: absolute;
+  margin: -60px 0px 0px 0px;
+  right: 30px;
+  cursor: pointer;
+}
