--- a/src/App.css
+++ b/src/App.css
@@ -292,14 +292,67 @@ html { min-width: 1000px; cursor: default; }
 #help_title {
   text-align: center;
   border-bottom: solid 1px #ababab;
-  padding-bottom: 15px;
+  padding-bottom: 20px;
   margin-top: 0px;
 }
 
-#help_close_div img {
+#help_close_icon img {
   width: 25px;
   position: absolute;
   margin: -60px 0px 0px 0px;
   right: 30px;
   cursor: pointer;
+}
+
+#help_modal_icon {
+  width: 27px;
+  position: absolute;
+  margin-left: 33.5%;
+}
+
+#help_contents {
+  display: grid;
+  grid-template-columns: 10% 80% 10%;
+  margin-top: 40px;
+}
+
+#help_contents div {
+  padding-bottom: 20px;
+}
+
+.pre_and_next {
+  width: 35px;
+  margin-top: 150%;
+  cursor: pointer;
+}
+
+#help_next_icon img {
+  margin-left: 65%;
+}
+
+#help_contents_img {
+  background-size: cover;
+  height: 320px;
+}
+
+#help_comment {
+  padding: 10px;
+  margin-top: 20px;
+  line-height: 25px;
+  margin-left: 80px;
+  color: #3797a4;
+}
+
+#page_notice {
+  border: solid 1px #ababab;
+  display: inline-block;
+  padding: 10px;
+  position: absolute;
+  font-size: 22px;
+  margin : 30px 0px 0px 20px;
+}
+
+#comment_div {
+  margin-top: 40px;
+  border-top: solid 1px #ababab;
 }
